Fixed apostrophe escaping on from page. Added CVS instructions to download page. Updated documentation page. Imported code guide into HTML version. Converted the VC++ instructions into HTML
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1734 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep-site/dftd.css
+++ b/dangerdeep-site/dftd.css
@@ -59,6 +59,17 @@ img.right {
 	float: right;
 }
 
+div.code {
+	text-align: left;
+	background-color: #444;
+	border: 1px solid #fff;
+	width: 100%;
+	white-space: pre;
+	overflow: auto;
+	font-family: monospace;
+	color: #fff;
+}
+
 /* gallery */
 div.thumbnails img {
 	border-width: 0px;
